--- a/404.md
+++ b/404.md
@@ -6,6 +6,6 @@ title: 404
 # Oops!
 According to Aɥilomŭtl of the Ɥatl, the environment EVδ₇ of this nk(ξ)′ sphere did not align with a compatible ŶPoint on the δ equilibrium accumulation point, probably due to the slowly moving non-trivial zeroes on said δ equilibrium shifting along a dimention set corresponsible with any congruent EVγ₇/e′ set. 
 
-Maybe try a different alignment configuration; or try reanalyzing the stability vars, we wouldn't want you to be pulled into a theta-feedback space inside the Sacred Edge!
+Maybe try a different alignment configuration; or try reanalyzing the stability vars, we wouldn't want you to be pulled into a theta-feedback space inside the Sacred Edge! (That's what happened to Aɥilomŭtl of the Ɥatl)
 
 
